--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>589</width>
-    <height>412</height>
+    <height>622</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,6 +45,19 @@
      </widget>
     </item>
     <item row="4" column="1">
+     <widget class="QPushButton" name="pushButton">
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>fullscreen</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
      <widget class="QQuickWidget" name="quickWidget">
       <property name="minimumSize">
        <size>
