--- a/3dvisualization.qrc
+++ b/3dvisualization.qrc
@@ -1,1 +1,6 @@
-<RCC/>
+<RCC>
+    <qresource prefix="/shaders">
+        <file>fragmentShader.glsl</file>
+        <file>vertexShader.glsl</file>
+    </qresource>
+</RCC>
